--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* New font - Source Sans Pro */
+
 .navbar {
 	font-family: 'Josefin Sans', sans-serif;
 	font-weight: 600;
@@ -31,7 +33,7 @@
     background-image: url(../img/img_bg_wave.png);
 }
 .page3 {
-	
+
 }
 .page4 {
 	background-repeat: no-repeat;
@@ -60,6 +62,30 @@
 #vivus-name {
 	width: 70vw;
 }
+
+/*Typing Text Animation*/
+span.typed-text {
+	font-weight: normal;
+	color: #86c232;
+}
+span.cursor {
+	display: inline-block;
+	background-color: white;
+	margin-left: 0.1rem;
+	width: 2px;
+	animation: blink 1s infinite;
+}
+span.cursor.typing {
+	animation: none;
+}
+@keyframes blink {
+  0%  { background-color: #ccc; }
+  49% { background-color: #ccc; }
+  50% { background-color: transparent; }
+  99% { background-color: transparent; }
+  100%  { background-color: #ccc; }
+}
+
 .raw-text {
 	text-align: center;
 	font-family: 'Open Sans', sans-serif;
