--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,8 @@
 }
 .loader {
     position: fixed;
-    left: 0px;
-    top: 0px;
+    left: 0;
+    top: 0;
     width: 100%;
     height: 100%;
     z-index: 9999;
@@ -31,9 +31,6 @@
     background-repeat: repeat-x;
     background-size: contain;
     background-image: url(../img/img_bg_wave.png);
-}
-.page3 {
-
 }
 .page4 {
 	background-repeat: no-repeat;
@@ -161,7 +158,7 @@ span.cursor.typing {
 }
 .org-name {
 	font-size: 2.6em;
-	padding: 10px 0px 10px 0px;
+	padding: 10px 0 10px 0;
 }
 .intern-panel-body {
 	padding: 20px 20px 20px 20px;
@@ -325,7 +322,7 @@ ul {
 	}
 	.intern-panel-body {
 		padding-top: 10px;
-		padding-left: 0px;
+		padding-left: 0;
 		padding-bottom: 10px;
 	}
 	.intern-panel-image {
